<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialCDE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="mainstring">mainstring</string>
    <string name="loginstring">Log In</string>
    <string name="proxystring">Proxy server host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="autologin">Auto login</string>
    <string name="savapassword">Save password</string>
    <string name="buttonlogin">Log In</string>
    <string name="noaccount">I have no account, I want to register</string>
    <string name="registration">Registration</string>
    <string name="butonreg">Registration</string>
    <string name="haveaccount">I already have an account, I want to sign in</string>
    <string name="email">Email</string>
    <string name="invitationcode">Invitation code</string>
    <string name="confirmpassw">Confirm password</string>
    <string name="app_title">SocialCDE</string>
    <string name="for_android">for Android</string>
    <string name="socialtfs">Social for CDE</string>
    <string name="signup">Sign up for SocialCDE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="drawer_services_title">Services</string>
    <string name="no_users_found">No users found</string>
    <string name="services">Services..</string>
    <string name="null_string" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">Follow</string>
    <string name="nomoreposts">There are no older posts to show.</string>
    <string name="loading">Loading..</string>
    <string name="logout">Logout</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="insertPIN">Eventually enter the Pin..</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_save">Save</string>
    <string name="buttonOK">OK</string>
    <string name="buttoncancel">Cancel</string>
    <string name="name_dialog">Username</string>
    <string name="passworddialog">Password</string>
    <string name="domain">Domain</string>
    <string name="hidesuggestion">Hide from Suggestions</string>
    <string name="oldpassword">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title_dialog_change_password">Change Password</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="hideunide">Hide/Unhide</string>
    <string name="title_hide_from">Hide user from:</string>
    <string name="suggestion">Suggestions</string>
    <string name="iterationtimeline">Iteration Timeline</string>
    <string name="interactivetimeline">Interactive Timeline</string>
    <string name="choose_avatar">Choose your avatar</string>

</resources>
