<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollviewregistration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AliceBlue" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="5dp"
            android:text="@string/registration"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRegProxy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/proxystring" >

        </EditText>

        <EditText
            android:id="@+id/editTextRegEmail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextRecInvCode"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/invitationcode" />

        <EditText
            android:id="@+id/editTextRegName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editTextRegPassw"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextRegConfPassw"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/confirmpassw"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" >
        </LinearLayout>

        <Button
            android:id="@+id/buttonSendRegistration"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/butonreg" />

    </LinearLayout>

</ScrollView>
