<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutPass"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/FrameLayout1AVATAR_IMAGE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/textView1_title_service_CHANGEPASS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/title_dialog_change_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1_buttons_CHANGEPASS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_edittexts_CHANGEPASS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="bottom|center|center_horizontal|center_vertical" >

        <Button
            android:id="@+id/button1_dialog_CANCELCHANGEPASS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_little_button"
            android:text="@string/buttoncancel" />

        <Button
            android:id="@+id/button2_dialog_OKCHANGEPASS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_little_button"
            android:text="@string/buttonOK" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_edittexts_CHANGEPASS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FrameLayout1AVATAR_IMAGE"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextdialogOLDPASSWORD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/oldpassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextDialogNEWPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextdialogRepeatPASSWORD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />
    </LinearLayout>

</RelativeLayout>